# MyDB

./: .gitignore  00Database.cpp  01Crud.cpp  02Query.cpp  03Interpreter.cpp  04Parser.cpp  05Interface.cpp  CMakeLists.txt  CRUDEngine.cpp  Compiler.cpp  Database.cpp  Makefile  README.md  imgui.ini  main.cpp
.github/workflows/: cmake.yml
src/: main.cpp
src/Crud/: Connection.cpp  Read.cpp
src/Database/: Database.cpp  Database.h
src/Interface/: Interface.cpp
src/Interpreter/: Dfa.cpp  Interpreter.cpp  Query.cpp  Query.h
src/Misc/: Parser.cpp
